--- a/src/components/StockCharts/StockCharts.module.scss
+++ b/src/components/StockCharts/StockCharts.module.scss
@@ -3,6 +3,6 @@
   grid grid-cols-2 grid-rows-2;
 
   .chartContainer {
-    @apply w-full h-full rounded-[10px] bg-[#131722];
+    @apply w-full h-full rounded-[5px] bg-[#131722] overflow-hidden;
   }
 }
