--- a/src/pages/index/index.module.scss
+++ b/src/pages/index/index.module.scss
@@ -3,7 +3,7 @@
   gap-[10px] p-[10px] bg-transparent;
 
   .navbar {
-    @apply rounded-[10px] overflow-hidden min-w-[100px] h-[50vh] sm:h-full bg-[#131722] p-[10px];
+    @apply rounded-[10px] overflow-hidden w-[200px] h-[50vh] sm:h-full bg-[#131722] p-[10px];
 
     .options {
       @apply bg-[#161b2b] w-full h-[200px] mb-[20px] rounded-[10px] p-[10px]
@@ -43,8 +43,9 @@
         @apply hidden;
       }
 
-      button {
-        @apply w-full bg-transparent text-[#fff] border-none py-[5px]
+      li {
+        @apply w-full bg-transparent border-none py-[5px] px-[10px]
+        flex justify-between items-center
         transition-colors duration-100;
 
         &:hover {
@@ -53,6 +54,10 @@
 
         &.activeSymbol {
           @apply bg-[#2962ff];
+        }
+
+        p {
+          @apply text-[#fff]
         }
       }
     }
